--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,5 +56,8 @@
     <string name="popup_food">식단 기록</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="mysprout_pagename_str">마이새싹</string>
+    <string name="mysprout_today_str">Today</string>
+    <string name="mysprout_level_str">Lv.</string>>
 
 </resources>
