--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="login_email">Email</string>
     <string name="login_password">Password</string>
     <string name="login_keep">로그인 유지</string>
-    <string name="forget_password">Forget password?</string>
+    <string name="new_user">처음이신가요?</string>
 
     <!--첫 입력화면 텍스트-->
     <string name="your_nick">당신의 이름과</string>
